--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-		<title>React App</title>
+		<title>MovieRedux | Movie App Using React Hooks & Redux</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
